remove api key :v

--- a/NLP/Bai1/Testing/transformer-testing-en2vi.ipynb
+++ b/NLP/Bai1/Testing/transformer-testing-en2vi.ipynb
@@ -1535,7 +1535,7 @@
     "# from google import genai\n",
     "\n",
     "# # Truyền API Key trực tiếp vào đây\n",
-    "# client = genai.Client(api_key=\"AIzaSyAsOHchTqzmf2bNTniUAno286es8rnrj48\")\n",
+    "# client = genai.Client(api_key=\"\")\n",
     "\n",
     "# response = client.models.generate_content(\n",
     "#     model=\"gemini-2.5-flash\", # Hoặc gemini-2.0-flash-exp\n",
